nginx-ingress/hello-kubernetes-ingress-sm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: sample-nginx
    #cert-manager.io/cluster-issuer: letsencrypt-prod   
spec:
  # tls:
  # - hosts:
  #   - hw1-127052021.tetarwal.de
  #   - hw2-127052021.tetarwal.de
  #   secretName: hello-kubernetes-tls-hw
  rules:
  - host: "hello-kubernetes-ingress-first.domain"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "hello-kubernetes-ingress-second.domain"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
